--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - ./web:/usr/src/app
     expose:
       - "8000"
-    env_file: .env_local
+    env_file: .env
     command: /usr/local/bin/gunicorn config.wsgi -b 0.0.0.0:8000
 
   nginx:
