--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 .idea
 *pyc
 *__pycache__*
-*migrations*
+*migrations/0*
 .venv
 *script.sh
 *media/
@@ -11,3 +11,5 @@
 web/static
 web/.daemon.lock
 web/.daemon.pid
+web/first.sh
+web/.env
