add variables for web/first.sh script

--- a/.env
+++ b/.env
@@ -8,3 +8,10 @@ POSTGRES_USER=
 POSTGRES_PASSWORD=
 DB_SERVICE=postgres
 DB_PORT=5432
+
+ADMIN_USERNAME=
+ADMIN_EMAIL=
+ADMIN_PASSWORD=
+CHANNEL_NAME=
+CHANNEL_URL=
+CATEGORY=
