--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,6 @@ version: '2'
 services:
   web:
     build: ./web
-    restart: always
     links:
       - postgres:postgres
     volumes:
@@ -11,7 +10,7 @@ services:
     expose:
       - "8000"
     env_file: .env_local
-    command: /usr/local/bin/gunicorn config.wsgi -b 0.0.0.0:8000
+    entrypoint: ./entrypoint.sh -f
 
   nginx:
     restart: always
