--- a/production.yml
+++ b/production.yml
@@ -11,7 +11,7 @@ services:
     expose:
       - "8000"
     env_file: .env
-    command: /usr/local/bin/gunicorn config.wsgi -b 0.0.0.0:8000
+    entrypoint: ./entrypoint.sh -m -i -s -d restart -r
 
   nginx:
     restart: always
