--- a/production.yml
+++ b/production.yml
@@ -11,7 +11,7 @@ services:
     expose:
       - "8000"
     env_file: .env
-    entrypoint: ./entrypoint.sh -m -i -s -d start
+    entrypoint: ./entrypoint.sh
 
   nginx:
     restart: always
