--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     expose:
       - "8000"
     env_file: .env_local
-    entrypoint: ./entrypoint.sh
+    entrypoint: ./entrypoint.sh -run
 
   nginx:
     restart: always
